fix: fix bug 9623,  center align content when adjust window size

--- a/src/web/sass/article.scss
+++ b/src/web/sass/article.scss
@@ -20,6 +20,12 @@
     border-radius: 8px;
 
     .read {
+      position: absolute;
+      width: 90%;
+      min-width: 600px;
+      max-width: 1024px;
+      left: 50%;
+      transform: translateX(-50%);
       background-color: transparent;
       font-family: SourceHanSansSC-Normal;
       margin: 0px;
